add terms of service privacy pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -113,7 +113,7 @@
             <div class="spinner"></div>
         </a>
         <footer>
-            &copy; 2023 YouTube Uploader. All rights reserved.
+            &copy; 2023 YouTube Uploader. All rights reserved. &nbsp;|&nbsp; <a href="/privacy">Privacy</a> &nbsp;|&nbsp; <a href="/terms">Terms</a>
         </footer>
     </div>
 
